WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70441
[chromium] Fix webkit style for a few files
https://bugs.webkit.org/show_bug.cgi?id=70441
Summary
[chromium] Fix webkit style for a few files
Shawn Singh
Reported
2011-10-19 14:25:17 PDT
Just a 30-second fix to remove some errors when running the check-webkit-style script.
Attachments
Patch
(4.78 KB, patch)
2011-10-19 14:28 PDT
,
Shawn Singh
no flags
Details
Formatted Diff
Diff
included bug URL to changelog and removed unnecessary include file
(4.70 KB, patch)
2011-10-19 16:14 PDT
,
Shawn Singh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shawn Singh
Comment 1
2011-10-19 14:28:59 PDT
Created
attachment 111675
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-19 15:33:28 PDT
Attachment 111675
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
James Robinson
Comment 3
2011-10-19 15:49:31 PDT
Comment on
attachment 111675
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=111675&action=review
Thanks for fixing these. The stylebot is correct, though, that the ChangeLog entry needs a bug number. Will R+ soon as that's addressed.
> Source/WebCore/platform/graphics/chromium/LayerChromium.cpp:42 > +#include "GraphicsContext3D.h"
I guess this wasn't sorted correctly? Now that you're moving it, though, do we need it at all in LayerChromium.cpp? I think the answer is that we don't now that drawTexturedQuad is no longer in LayerChromium. Can you try deleting it?
Shawn Singh
Comment 4
2011-10-19 16:14:29 PDT
Created
attachment 111692
[details]
included bug URL to changelog and removed unnecessary include file
James Robinson
Comment 5
2011-10-19 16:22:25 PDT
Comment on
attachment 111692
[details]
included bug URL to changelog and removed unnecessary include file Cool! thanks.
WebKit Review Bot
Comment 6
2011-10-19 19:41:52 PDT
Comment on
attachment 111692
[details]
included bug URL to changelog and removed unnecessary include file Clearing flags on attachment: 111692 Committed
r97924
: <
http://trac.webkit.org/changeset/97924
>
WebKit Review Bot
Comment 7
2011-10-19 19:41:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug