[chromium] Fix webkit style on a few files. https://bugs.webkit.org/show_bug.cgi?id=70441

Patch by Shawn Singh <shawnsingh@chromium.org> on 2011-10-19
Reviewed by James Robinson.

Tested with existing layout and unit tests.

* platform/graphics/chromium/LayerChromium.cpp:
* platform/graphics/chromium/LayerChromium.h:
(WebCore::LayerChromium::setIsMask):
* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::initialize):
* platform/graphics/chromium/LayerRendererChromium.h:

Canonical link: https://commits.webkit.org/86639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97924 268f45cc-cd09-0410-ab3c-d52691b4dbfc